updates in userController

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,9 +1,6 @@
 {
     "include":"src",
     "exclude":"src/documentation",
-    "check-coverage":true,
-    "lines":100,
-    "function":70,
-    "branch":100
+    "check-coverage":true
     
 }
