--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.3.1",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "coverage-badge-creator": "^1.0.11",
-    "istanbul-badges-readme": "^1.8.1"
+    "istanbul-badges-readme": "^1.8.1",
+    "dotenv": "^16.0.0"
   }
 }
