add delete message function

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_DEV_URL=mongodb://localhost:27017/my_brand
-MONGO_TEST_URL=mongodb+srv://alain:kabebe22@cluster0.ax3p6.mongodb.net/my_brand_test?retryWrites=true&w=majority
-MONGO_TEST_URL_OFF=mongodb://localhost:27017/my_brand_test
+MONGO_TEST_URL_OFF=mongodb+srv://alain:kabebe22@cluster0.ax3p6.mongodb.net/my_brand_test?retryWrites=true&w=majority
+MONGO_TEST_URL=mongodb://localhost:27017/my_brand_test
 MONGO_PROD_URL=mongodb+srv://alain:kabebe22@cluster0.ax3p6.mongodb.net/my_brand?retryWrites=true&w=majority
-NODE_ENV=production
+NODE_ENV=dev
 JWT_SECRET=tresor
